--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <li>2 slices of bread</li>
     <li>4 slices of cheese
     <ul>
-      <li></li>
+      <li>cheddar</li>
+      <li>mozarella</li>
+      <li>pepperjack</li>
     </ul>
     </li>
     <li>1 tbsp of butter</li>
